Believe I have everything drawing in GamePanel correctly