@@ -13,6 +13,8 @@ import java.awt.image.BufferedImage;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.Iterator;
+
 import logic.*;
 import game.*;
 //import logic.*;
@@ -26,21 +28,23 @@ public class GamePanel extends JPanel implements ActionListener, MouseListener{
     private HashMap<Byte, Factory> factoryMap;
     private Coordinates factoryOne, factoryTwo, factoryThree, factoryFour, factoryFive, factorySix, factorySeven, factoryEight, factoryNine;
     private Coordinates tileOne, tileTwo, tileThree, tileFour, tileFive, tileSix;
-    private JButton factory1Button, factory2Button, factory3Button, factory4Button, factory5Button, factory6Button, factory7Button, factory8Button, factory9Button;
     private Factory factory1, factory2, factory3, factory4, factory5, factory6, factory7, factory8, factory9;
+    private FactoryFloor floor;
     private ImageIcon factoryIcon;
+    private bagClass bag;
 
     public GamePanel(CardLayout cl) {
         this.cl = cl;
         setUpImages();
         setUpButtons();
+        setFactoryMap();
     }
 
     public void paintComponent(Graphics g) {
         super.paintComponent(g);
 
         g.setColor(Color.WHITE);
-
+        g.setFont(new Font("Italics", Font.ITALIC, 40));
         // Paints background
         g.drawImage(background, 0, 0, getWidth(), getHeight(), null);
 
@@ -69,12 +73,13 @@ public class GamePanel extends JPanel implements ActionListener, MouseListener{
 
         drawFactoryFloor(g);
 
-        g.drawString("20", tileOne.getX() + getWidth() / 45, tileOne.getY() + getHeight() / 7);
-        g.drawString("20", tileTwo.getX() + getWidth() / 45, tileTwo.getY() + getHeight() / 7);
-        g.drawString("20", tileThree.getX() + getWidth() / 45, tileThree.getY() + getHeight() / 7);
-        g.drawString("20", tileFour.getX() + getWidth() / 45, tileFour.getY() + getHeight() / 7);
-        g.drawString("20", tileFive.getX() + getWidth() / 45, tileFive.getY() + getHeight() / 7);
+        g.drawString("" + floor.getNumTiles(Constants.BLUE_TILE), tileOne.getX() + getWidth() / 45, tileOne.getY() + getHeight() / 7);
+        g.drawString("" + floor.getNumTiles(Constants.RED_TILE), tileTwo.getX() + getWidth() / 45, tileTwo.getY() + getHeight() / 7);
+        g.drawString("" + floor.getNumTiles(Constants.YELLOW_TILE), tileThree.getX() + getWidth() / 45, tileThree.getY() + getHeight() / 7);
+        g.drawString("" + floor.getNumTiles(Constants.BLACK_TILE), tileFour.getX() + getWidth() / 45, tileFour.getY() + getHeight() / 7);
+        g.drawString("" + floor.getNumTiles(Constants.WHITE_TILE), tileFive.getX() + getWidth() / 45, tileFive.getY() + getHeight() / 7);
 
+        paintTiles(factoryMap.get(Constants.FACTORY_ONE), factoryOne, g);
         paintTiles(factoryMap.get(Constants.FACTORY_TWO), factoryTwo, g);
         paintTiles(factoryMap.get(Constants.FACTORY_THREE), factoryThree, g);
         paintTiles(factoryMap.get(Constants.FACTORY_FOUR), factoryFour, g);
@@ -112,7 +117,7 @@ public class GamePanel extends JPanel implements ActionListener, MouseListener{
     @Override
     public void actionPerformed(ActionEvent e) {
         if(e.getSource().equals(returnStart)){
-            cl.show(Constants.PANEL_CONT, Constants.PLAYER_PANEL);
+            //cl.show(Constants.PANEL_CONT, Constants.PLAYER_PANEL);
         }
     }
 
@@ -135,12 +140,13 @@ public class GamePanel extends JPanel implements ActionListener, MouseListener{
         tileThree = new Coordinates(getWidth()/3, getHeight()/2-tileHeight/2);
         tileFour = new Coordinates(2 * getWidth()/3, getHeight()/2-tileHeight/2);
         tileFive = new Coordinates(getWidth()/2 + tileWidth, getHeight()/2-tileHeight/2);
+        tileSix = new Coordinates((getWidth() / 2) - (tileWidth / 2), getHeight() / 4);
     }
 
     // Sets up both of the maps
     private void setFactoryMap() {
         factoryMap = new HashMap<>();
-
+        floor = new FactoryFloor();
         // Adds each of the factories to the map
         factoryMap.put(Constants.FACTORY_ONE, new Factory(4));
         factoryMap.put(Constants.FACTORY_TWO, new Factory(4));
@@ -157,21 +163,13 @@ public class GamePanel extends JPanel implements ActionListener, MouseListener{
 
     // Sets up the tiles in the factories
     private void setFactoryTiles() {
-        ArrayList<TileObject> possibleTiles = new ArrayList<>();
-        
-        for(byte i = 0; i < 20; i++) {
-            possibleTiles.add(new TileObject(Constants.BLACK_TILE));
-            possibleTiles.add(new TileObject(Constants.BLUE_TILE));
-            possibleTiles.add(new TileObject(Constants.RED_TILE));
-            possibleTiles.add(new TileObject(Constants.YELLOW_TILE));
-            possibleTiles.add(new TileObject(Constants.WHITE_TILE));
-        }
-
-        Collections.shuffle(possibleTiles);
-
+        bag = new bagClass();
+        bag.fillBag();
+        floor.addTile(new TileObject(Constants.ONE_TILE));
+        floor.setHasOneTile(true);
         for(byte i = 0; i < 36; i++) {
             byte remain = (byte) (i % 9);
-            factoryMap.get(remain).addTile(possibleTiles.get(i));
+            factoryMap.get(remain).addTile(bag.get());
         }
     }
 
@@ -194,7 +192,10 @@ public class GamePanel extends JPanel implements ActionListener, MouseListener{
 
     // Draws the factory floor
     private void drawFactoryFloor(Graphics g) {
-        drawSingleFactoryFloor(g, tileSix, oneTile);
+        //drawSingleFactoryFloor(g, tileSix, oneTile);
+        if(floor.hasOneTile()){
+            drawSingleFactoryFloor(g, tileSix, oneTile);
+        }
         drawSingleFactoryFloor(g, tileOne, blueTile);
         drawSingleFactoryFloor(g, tileTwo, redTile);
         drawSingleFactoryFloor(g, tileThree, yellowTile);
@@ -211,35 +212,22 @@ public class GamePanel extends JPanel implements ActionListener, MouseListener{
         int xVal = c.getX();
         int yVal = c.getY();
 
-        LinkedList<TileObject> tiles = f.getTiles();
-        TileObject tile = tiles.getFirst().getItem();
-
-        g.drawImage(Constants.getImage(tile.getType()), xVal + factoryWidth/2 - tileWidth/2, yVal+tileHeight/2, tileWidth/2, tileHeight/2, null);
-
-        g.drawImage(Constants.getImage(tile.getType()), xVal + factoryWidth/2 - tileWidth/2, yVal+tileHeight/2, tileWidth/2, tileHeight/2, null);
+        ArrayList<TileObject> tiles = f.getTiles();
+        //TileObject tile = tiles.getFirst().getItem();
+       // Iterator<TileObject> tiles = ti.iterator();
+        g.drawImage(Constants.getImage(tiles.get(0).getType()), xVal + factoryWidth/2 - tileWidth/2, yVal+tileHeight/2, tileWidth/2, tileHeight/2, null);
         
-        g.drawImage(Constants.getImage(tile.getType()), xVal + factoryWidth/2 - tileWidth/2, yVal+tileHeight, tileWidth/2, tileHeight/2, null);
+        g.drawImage(Constants.getImage((tiles.get(1)).getType()), xVal + factoryWidth/2 - tileWidth/2, yVal+tileHeight, tileWidth/2, tileHeight/2, null);
         
-        g.drawImage(Constants.getImage(tile.getType()), xVal + factoryWidth/2, yVal+tileHeight/2, tileWidth/2, tileHeight/2, null);
+        g.drawImage(Constants.getImage(tiles.get(2).getType()), xVal + factoryWidth/2, yVal+tileHeight/2, tileWidth/2, tileHeight/2, null);
         
-        g.drawImage(Constants.getImage(tile.getType()), xVal + factoryWidth/2, yVal+tileHeight, tileWidth/2, tileHeight/2, null);
+        g.drawImage(Constants.getImage(tiles.get(3).getType()), xVal + factoryWidth/2, yVal+tileHeight, tileWidth/2, tileHeight/2, null);
     }
 
     @Override
     public void mouseClicked(MouseEvent e) {
         int x = e.getX();
         int y = e.getY();
-<<<<<<< Updated upstream
-        if(x < (int)(getWidth()/7.5)){
-            if(y < (int)(getHeight()/5)){
-                
-            } else if (y < getHeight()/2-factoryHeight/2 + (int)(getHeight()/5)){
-
-            } else {
-
-            }
-        }
-=======
         if(e.getButton() == e.BUTTON1)
         {
             Factory chosen = null;
@@ -273,10 +261,9 @@ public class GamePanel extends JPanel implements ActionListener, MouseListener{
             //method to put chosen factory into player panel
         
             //switch to player for now, 
-            cl.show(Constants.PANEL_CONT, Constants.PLAYER_PANEL);
+            //cl.show(Constants.PANEL_CONT, Constants.PLAYER_PANEL);
         }
         
->>>>>>> Stashed changes
     }
 
     @Override
